resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/Availability/AddMissingParameter.cs
using UnityEngine;

public class Foo : MonoBehaviour
{
    public void OnAudioFilterRead(int channels{caret})
    {
    }
}
